--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ certifi>=2023.11.17
 
 # Database
 sqlalchemy>=2.0.0
+flask>=3.0.0
+flask-sqlalchemy>=3.1.0
+flask-cors>=4.0.0
 
 # Configuration
 pyyaml>=6.0.1
